--- a/Bejerholm Stenhuggeri/src/view/Panel_LynSalg.form
+++ b/Bejerholm Stenhuggeri/src/view/Panel_LynSalg.form
@@ -190,7 +190,7 @@
                 </Component>
               </SubComponents>
             </Container>
-            <Container class="javax.swing.JPanel" name="jPanel1">
+            <Container class="javax.swing.JPanel" name="jPanel_VareLinjer">
               <Properties>
                 <Property name="name" type="java.lang.String" value="LynSalg" noResource="true"/>
                 <Property name="opaque" type="boolean" value="false"/>
