--- a/Bejerholm Stenhuggeri/src/view/MainFrame.form
+++ b/Bejerholm Stenhuggeri/src/view/MainFrame.form
@@ -204,6 +204,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Ordre"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton_OrdreActionPerformed"/>
+              </Events>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
                   <AbsoluteConstraints x="250" y="250" width="130" height="50"/>
